<resources>
    <string name="app_name">brewferm</string>
    <string name="action_settings">Settings</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="beer_readings">Beer Readings</string>
    <string name="beer_placeholder_readings">Beer: ??.? Target: ??.?</string>
    <string name="hint">hint</string>
    <string name="chamber_placeholder_readings">Chamber: ??.? Target: ??.?</string>
    <string name="chamber_readings">Chamber Readings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send">Send</string>
    <string name="set_beer_target">Set Beer Target</string>
</resources>
