<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/readingsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReadingsFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/BeerValues"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:translationZ="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtBeerValues"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/beer_readings"
                android:text="@string/beer_placeholder_readings"
                android:textSize="24sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.card.MaterialCardView>

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/BeerValues" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/ChamberValues"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:translationZ="2dp"
        app:layout_constraintEnd_toEndOf="@+id/BeerValues"
        app:layout_constraintStart_toStartOf="@+id/BeerValues"
        app:layout_constraintTop_toBottomOf="@id/divider">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtChamberValues"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/chamber_readings"
                android:text="@string/chamber_placeholder_readings"
                android:textSize="24sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.card.MaterialCardView>

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="@+id/BeerValues"
        app:layout_constraintStart_toStartOf="@+id/BeerValues"
        app:layout_constraintTop_toBottomOf="@id/ChamberValues" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/SystemValues"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:translationZ="6dp"
        app:layout_constraintEnd_toEndOf="@+id/BeerValues"
        app:layout_constraintStart_toStartOf="@+id/BeerValues"
        app:layout_constraintTop_toBottomOf="@id/divider2">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtSystemValues"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="Heat/Cool Mode"
                android:text="Desired: ?? Current: ??"
                android:textSize="24sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.card.MaterialCardView>

    <View
        android:id="@+id/divider3"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="@+id/BeerValues"
        app:layout_constraintStart_toStartOf="@+id/BeerValues"
        app:layout_constraintTop_toBottomOf="@id/SystemValues" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/PercentValues"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:translationZ="2dp"
        app:layout_constraintEnd_toEndOf="@+id/BeerValues"
        app:layout_constraintStart_toStartOf="@+id/BeerValues"
        app:layout_constraintTop_toBottomOf="@id/divider3">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPercentValues"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="Heat/Cool Running Times"
                android:text="Heat: ??.?% Cool: ??.?%"
                android:textSize="24sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.card.MaterialCardView>

    <View
        android:id="@+id/divider4"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="@id/PercentValues"
        app:layout_constraintStart_toStartOf="@id/PercentValues"
        app:layout_constraintTop_toBottomOf="@id/PercentValues" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/ITermValues"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:translationZ="2dp"
        app:layout_constraintEnd_toEndOf="@+id/BeerValues"
        app:layout_constraintStart_toStartOf="@+id/BeerValues"
        app:layout_constraintTop_toBottomOf="@id/divider4">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtITermValues"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="PID Integrator Values"
                android:text="Beer: ??.? Chamber: ??.?%"
                android:textSize="24sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.card.MaterialCardView>


    <Button
        android:id="@+id/btnRefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Refresh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ITermValues" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRefresh" />

</androidx.constraintlayout.widget.ConstraintLayout>